--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
           </div>
         </div>
         <div class="notice" id="calc-details"></div>
+        <p class="muted" id="factor-mismatch" style="display:none;"></p>
         <p class="muted" id="interpretation"></p>
         <p class="muted" id="disclaimer"><strong>Disclaimer:</strong> CarbonWise provides informational estimates only. This is not legal, audit, or tax advice.</p>
         <div class="notice" id="compliance-helper">
@@ -377,51 +378,97 @@
 
   <script>
     // Configurable emission factors (metric tons CO2e per kWh)
-    // Location-based Scope 2 emission factors (t CO2e/kWh), versioned by year and source
-    // Data is static and updated when new government factors are published.
+    /* Location-based Scope 2 emission factors (t CO2e/kWh), versioned and immutable per publication.
+       Governance:
+       - Only FINAL, government-issued datasets are used (no provisional/forecasted data).
+       - New data is appended as new versions; prior versions are never overwritten to preserve historical stability.
+       - Factor selection prefers a billing-year match; otherwise uses the most recent FINAL year.
+       - Historical calculations should reference the factor version used at time of calculation. */
     const EMISSION_FACTORS = {
       US: {
-        default: { factor: 0.000379, year: 2022, source: "EPA eGRID" },
+        default: [
+          { factor: 0.000379, year: 2022, source: "EPA eGRID", published_date: "2024-01-15", status: "final", version: "v2022.1" }
+        ],
         regions: {
-          "CALIFORNIA": { factor: 0.000185, year: 2022, source: "EPA eGRID" },
-          "TEXAS": { factor: 0.000432, year: 2022, source: "EPA eGRID" },
-          "NEW YORK": { factor: 0.000154, year: 2022, source: "EPA eGRID" },
-          "FLORIDA": { factor: 0.000376, year: 2022, source: "EPA eGRID" },
-          "ILLINOIS": { factor: 0.000344, year: 2022, source: "EPA eGRID" },
-          "WASHINGTON": { factor: 0.000106, year: 2022, source: "EPA eGRID" }
+          "CALIFORNIA": [
+            { factor: 0.000185, year: 2022, source: "EPA eGRID", published_date: "2024-01-15", status: "final", version: "v2022.1" }
+          ],
+          "TEXAS": [
+            { factor: 0.000432, year: 2022, source: "EPA eGRID", published_date: "2024-01-15", status: "final", version: "v2022.1" }
+          ],
+          "NEW YORK": [
+            { factor: 0.000154, year: 2022, source: "EPA eGRID", published_date: "2024-01-15", status: "final", version: "v2022.1" }
+          ],
+          "FLORIDA": [
+            { factor: 0.000376, year: 2022, source: "EPA eGRID", published_date: "2024-01-15", status: "final", version: "v2022.1" }
+          ],
+          "ILLINOIS": [
+            { factor: 0.000344, year: 2022, source: "EPA eGRID", published_date: "2024-01-15", status: "final", version: "v2022.1" }
+          ],
+          "WASHINGTON": [
+            { factor: 0.000106, year: 2022, source: "EPA eGRID", published_date: "2024-01-15", status: "final", version: "v2022.1" }
+          ]
         }
       },
       CA: {
-        default: { factor: 0.000120, year: 2022, source: "Canada NIR" },
+        default: [
+          { factor: 0.000120, year: 2022, source: "Canada NIR", published_date: "2023-10-01", status: "final", version: "v2022.1" }
+        ],
         regions: {
-          "ONTARIO": { factor: 0.000040, year: 2022, source: "Canada NIR" },
-          "QUEBEC": { factor: 0.000001, year: 2022, source: "Canada NIR" },
-          "ALBERTA": { factor: 0.000620, year: 2022, source: "Canada NIR" },
-          "BRITISH COLUMBIA": { factor: 0.000020, year: 2022, source: "Canada NIR" }
+          "ONTARIO": [
+            { factor: 0.000040, year: 2022, source: "Canada NIR", published_date: "2023-10-01", status: "final", version: "v2022.1" }
+          ],
+          "QUEBEC": [
+            { factor: 0.000001, year: 2022, source: "Canada NIR", published_date: "2023-10-01", status: "final", version: "v2022.1" }
+          ],
+          "ALBERTA": [
+            { factor: 0.000620, year: 2022, source: "Canada NIR", published_date: "2023-10-01", status: "final", version: "v2022.1" }
+          ],
+          "BRITISH COLUMBIA": [
+            { factor: 0.000020, year: 2022, source: "Canada NIR", published_date: "2023-10-01", status: "final", version: "v2022.1" }
+          ]
         }
       },
       UK: {
-        default: { factor: 0.000193, year: 2023, source: "UK DEFRA" }
+        default: [
+          { factor: 0.000193, year: 2023, source: "UK DEFRA", published_date: "2024-05-01", status: "final", version: "v2023.1" }
+        ]
       },
       AU: {
-        default: { factor: 0.000790, year: 2023, source: "Australia NGA" },
+        default: [
+          { factor: 0.000790, year: 2023, source: "Australia NGA", published_date: "2024-02-01", status: "final", version: "v2023.1" }
+        ],
         regions: {
-          "NEW SOUTH WALES": { factor: 0.000730, year: 2023, source: "Australia NGA" },
-          "QUEENSLAND": { factor: 0.000820, year: 2023, source: "Australia NGA" },
-          "VICTORIA": { factor: 0.000920, year: 2023, source: "Australia NGA" }
+          "NEW SOUTH WALES": [
+            { factor: 0.000730, year: 2023, source: "Australia NGA", published_date: "2024-02-01", status: "final", version: "v2023.1" }
+          ],
+          "QUEENSLAND": [
+            { factor: 0.000820, year: 2023, source: "Australia NGA", published_date: "2024-02-01", status: "final", version: "v2023.1" }
+          ],
+          "VICTORIA": [
+            { factor: 0.000920, year: 2023, source: "Australia NGA", published_date: "2024-02-01", status: "final", version: "v2023.1" }
+          ]
         }
       },
       SG: {
-        default: { factor: 0.000408, year: 2022, source: "Singapore NEA" },
+        default: [
+          { factor: 0.000408, year: 2022, source: "Singapore NEA", published_date: "2023-08-01", status: "final", version: "v2022.1" }
+        ],
         regions: {
-          "SINGAPORE": { factor: 0.000408, year: 2022, source: "Singapore NEA" }
+          "SINGAPORE": [
+            { factor: 0.000408, year: 2022, source: "Singapore NEA", published_date: "2023-08-01", status: "final", version: "v2022.1" }
+          ]
         }
       },
       NZ: {
-        default: { factor: 0.000111, year: 2023, source: "New Zealand MBIE" }
+        default: [
+          { factor: 0.000111, year: 2023, source: "New Zealand MBIE", published_date: "2024-03-01", status: "final", version: "v2023.1" }
+        ]
       }
     };
-    const GLOBAL_FALLBACK = { factor: 0.000450, year: 2022, source: "Public average" };
+    const GLOBAL_FALLBACK = [
+      { factor: 0.000450, year: 2022, source: "Public average", published_date: "2023-01-01", status: "final", version: "v2022.1" }
+    ];
 
     // Valid regions to keep entries clean and trusted
     const REGION_OPTIONS = {
@@ -467,10 +514,12 @@
     const nextEl = document.getElementById('result-next');
     const calcDetailsEl = document.getElementById('calc-details');
     const interpretationEl = document.getElementById('interpretation');
+    const factorMismatchEl = document.getElementById('factor-mismatch');
 
     const TODAY = new Date();
     const CURRENT_YEAR = TODAY.getFullYear();
     const CURRENT_MONTH = TODAY.getMonth() + 1; // 1-12
+    const MONTHS = ["January","February","March","April","May","June","July","August","September","October","November","December"];
 
     const formatNumber = (n, digits = 2) => Number(n).toLocaleString(undefined, { maximumFractionDigits: digits, minimumFractionDigits: digits });
 
@@ -516,18 +565,31 @@
       });
     };
 
+    // Select a FINAL factor version: prefer billing-year match, else most recent final year. Never overwrite historical records.
+    const selectFinalFactor = (records, billingYear) => {
+      const finals = (records || []).filter((r) => r.status === 'final');
+      if (!finals.length) return null;
+      const exact = finals.find((r) => r.year === billingYear);
+      if (exact) return exact;
+      return finals.reduce((latest, rec) => {
+        if (!latest) return rec;
+        return rec.year > latest.year ? rec : latest;
+      }, null);
+    };
+
     const getEmissionFactor = (country, region) => {
       const countryData = EMISSION_FACTORS[country];
       const regionKey = normalizeKey(region);
       if (countryData?.regions && countryData.regions[regionKey]) {
-        const data = countryData.regions[regionKey];
-        return { ...data, regionLabel: `${country} – ${region}` };
+        const data = selectFinalFactor(countryData.regions[regionKey], parseInt(yearEl.value, 10));
+        if (data) return { ...data, regionLabel: `${country} – ${region}` };
       }
       if (countryData?.default) {
-        const data = countryData.default;
-        return { ...data, regionLabel: country };
+        const data = selectFinalFactor(countryData.default, parseInt(yearEl.value, 10));
+        if (data) return { ...data, regionLabel: country };
       }
-      return { ...GLOBAL_FALLBACK, regionLabel: "Global average" };
+      const fallback = selectFinalFactor(GLOBAL_FALLBACK, parseInt(yearEl.value, 10)) || GLOBAL_FALLBACK[0];
+      return { ...fallback, regionLabel: "Global average" };
     };
 
     countryEl.addEventListener('change', (e) => {
@@ -560,7 +622,7 @@
         alert('Carbon emissions can only be calculated for past or current periods.');
         return;
       }
-      const monthNumber = monthEl.selectedIndex; // Jan=1 in our options sequence
+      const monthNumber = MONTHS.indexOf(month) + 1; // Jan=1..Dec=12
       if (year === CURRENT_YEAR && monthNumber > CURRENT_MONTH) {
         alert('Future months are not supported. Please select a completed or current billing period.');
         return;
@@ -580,10 +642,21 @@
           ? 'Use this as a directional input in your client’s ESG summary.'
           : 'Track this month-over-month to spot reductions and set targets.';
 
-      calcDetailsEl.innerHTML = `Emissions = kWh × location-based factor<br />${formatNumber(kwh, 0)} kWh × ${factor} t CO₂e/kWh = ${formatNumber(tons, 3)} t CO₂e.<br />Based on public, government-issued emission factors (${factorData.source}, ${factorData.year}).`;
+      const factorSentence = `This estimate uses ${factorData.year} ${factorData.source} location-based electricity emission factors for ${factorData.regionLabel} (${formatNumber(factor, 6)} t CO₂e/kWh, version ${factorData.version}).`;
+      calcDetailsEl.textContent = factorSentence;
+
       const isPartialCurrent = year === CURRENT_YEAR && monthNumber === CURRENT_MONTH;
       const partialNote = isPartialCurrent ? ' Partial period estimate: This calculation is based on usage entered for the current month and may change once the billing period is complete.' : '';
-      interpretationEl.textContent = `For ${month} ${year} in ${region}, your electricity use generates about ${formatNumber(tons, 3)} metric tons CO₂e. This uses ${factorData.year} ${factorData.source} location-based factors for ${factorData.regionLabel}.${partialNote}`;
+      interpretationEl.textContent = `For ${month} ${year} in ${region}, your electricity use generates about ${formatNumber(tons, 3)} metric tons CO₂e.${partialNote}`;
+
+      // Show data currency disclaimer when billing year exceeds factor year
+      if (year > factorData.year) {
+        factorMismatchEl.style.display = 'block';
+        factorMismatchEl.textContent = 'Emission factors are published with a delay. This calculation uses the most recent available data.';
+      } else {
+        factorMismatchEl.style.display = 'none';
+        factorMismatchEl.textContent = '';
+      }
 
       placeholder.style.display = 'none';
       resultContainer.classList.add('active');
